# DeepTrace

./: .gitignore  CLAUDE.md  PLAN_VORPUS_PROCESSOR.md
asset/dataset/: DATASET_SUMMARY.txt  all.csv  similar.csv  test.csv  train.csv  valid.csv
ref/: SUMMARY.md  core.tex
src/: pyproject.toml
src/dataset/: README.md  __init__.py  __main__.py  utils.py  vorpus_processor.py
src/deeptrace/: __init__.py
src/deeptrace/docs/features/: DINOV3_USAGE.md
src/deeptrace/features/: __init__.py  __main__.py  extract.py  extractor.py  extractors.py
src/deeptrace/prepare/: __init__.py  convert_to_vcsl.py
src/deeptrace/preprocessing/: __init__.py  face_detection.py  image_cropper.py  retinaface_detector.py  video_augmenter.py  video_cropper.py
src/deeptrace/scripts/features/: extract.sh
src/deeptrace/utils/: __init__.py  parallel.py  path_utils.py
src/tracedino/: CHANGELOG_PREPROCESSING.md  CLAUDE.md  PREPROCESSING.md  PREPROCESSING_OPTIMIZATION.md  README.md  __init__.py  config.py  debug_training.py  evaluate.py  example.py  preprocess.py  train.py  visualize_samples.py
src/tracedino/dataset/: __init__.py  augmentations.py  datamodule.py  dataset.py  frame_extractor.py  metadata.py  preprocessed_dataset.py
src/tracedino/losses/: combined.py  koleo.py  supcon.py
src/tracedino/models/: adapter.py  backbone.py  tracedino.py
src/tracedino/utils/: __init__.py  distributed.py
