[project]
name = "trace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "isc-feature-extractor",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "polars>=1.34.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchmetrics>=1.0.3",
    "torchvision==0.21.0",
    "transformers>=4.56.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
isc-feature-extractor = { git = "https://github.com/lyakaap/ISC21-Descriptor-Track-1st" }
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
